--- a/provisioning/roles/create/tasks/provisioning.yml
+++ b/provisioning/roles/create/tasks/provisioning.yml
@@ -1,6 +1,6 @@
 - name: Criando o Security Group
   local_action:
-    module: ec_dois_group
+    module: ec2_group
     name: "{{ security_group }}"
     description: Security Group Giropops
     region: "{{ region }}"
@@ -52,7 +52,7 @@
   register: basic_firewall
 
 - name: Criando a instancia EC2
-  local_action: ec_dois
+  local_action: ec2
     group={{ security_group }}
     instance_type={{ instance_type }}
     image={{ image }}
@@ -61,40 +61,40 @@
     region={{ region }}
     keypair={{ keypair }}
     count={{ count }}
-  register: ec_dois
+  register: ec2
 
 - name: Adicionando a instancia ao inventario temp
   add_host: name={{ item.public_ip }} groups=giropops-new
-  with_items: "{{ ec_dois.instances }}"
+  with_items: "{{ ec2.instances }}"
 
 - name: Adicionando o ip publico da instancia criada no arquivo hosts
   local_action: lineinfile
     dest="./hosts"
     regexp={{ item.public_ip }}
     insertafter="[ip-publico]" line={{ item.public_ip }}
-  with_items: "{{ ec_dois.instances }}"
+  with_items: "{{ ec2.instances }}"
 
 - name: Adicionando o ip privado da instancia criada no arquivo hosts
   local_action: lineinfile
     dest="./hosts"
-    regexp={{ item.privado_ip }}
-    insertafter="[ip-privado]" line={{ item.privado_ip }}
-  with_items: "{{ ec_dois.instances }}"
+    regexp={{ item.private_ip }}
+    insertafter="[ip-privado]" line={{ item.private_ip }}
+  with_items: "{{ ec2.instances }}"
 
 - name: Esperando o SSH
   local_action: wait_for
     host={{ item.public_ip }}
     port=22
     state=started
-  with_items: "{{ ec_dois.instances }}"
+  with_items: "{{ ec2.instances }}"
 
 - name: Adicionando um nome tag na instancia
-  local_action: ec_dois_tag resource={{ item.id }} region={{ region }} profile={{ profile }} state=present
-  with_items: "{{ ec_dois.instances }}"
+  local_action: ec2_tag resource={{ item.id }} region={{ region }} profile={{ profile }} state=present
+  with_items: "{{ ec2.instances }}"
   args:
     tags:
       Name: ansible-{{ item.ami_launch_index|int + 1 }}
 
 - name: Adicionando a maquina criada no known_hosts
   shell: ssh-keyscan -H {{ item.public_ip }} >> ~/.ssh/known_hosts
-  with_items: "{{ ec_dois.instances }}"
+  with_items: "{{ ec2.instances }}"
