--- a/install_k8s/roles/join-workers/tasks/join-cluster.yml
+++ b/install_k8s/roles/join-workers/tasks/join-cluster.yml
@@ -4,7 +4,7 @@
 
 - name:
   debug:
-    msg: "[Worker] K8S_TOKEN_HOLDER K8S Hash is  {{ hostvars['K8S_TOKEN_HOLER']['hash'] }}"
+    msg: "[Worker] K8S_TOKEN_HOLDER K8S Hash is  {{ hostvars['K8S_TOKEN_HOLDER']['hash'] }}"
 
 - name: "Kubeadm reset node cluster config"
   command: 
@@ -13,7 +13,6 @@
 
 - name: "Kubeadm join"
   shell: 
-    kubeadm join opa --token={{ hostvars['K8S_TOKEN_HOLDER']['token'] }}
+    kubeadm join --token={{ hostvars['K8S_TOKEN_HOLDER']['token'] }}
     --discovery-token-ca-cert-hash sha256:{{ hostvars['K8S_TOKEN_HOLDER']['hash'] }}
     {{K8S_MASTER_NODE_IP}}:{{K8S_API_SECURE_PORT}}
-
