--- a/install_k8s/roles/create-cluster/tasks/init-cluster.yml
+++ b/install_k8s/roles/create-cluster/tasks/init-cluster.yml
@@ -8,7 +8,7 @@
   register: kubeadmin_init
 - name: Ensure .kube directory exists.
   file:
-    path: ~/.k8s
+    path: ~/.kube
     state: directory
 - name: Symlink the kubectl admin.conf to ~/.kube/conf.
   file:
